src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Name_Placement__c</fullName>
        <label>Name Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Conference Signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/E-newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Inside Front Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podcast - On Audio Host Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save the Date Postcards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Allocations__c</fullName>
        <label>Number of Allocations</label>
        <summaryForeignKey>gf_pp__Allocation__c.gf_pp__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type_ID__c</fullName>
        <formula>CASESAFEID(RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Primary__c</fullName>
        <description>ID for Primary Contact for an Opportunity&apos;s Account.</description>
        <formula>Account.gf_sf__Primary_Contact__r.Contact_ID_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID for Primary Contact for an Opportunity&apos;s Account.</inlineHelpText>
        <label>Opportunity Account Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_18__c</fullName>
        <description>This is the long Opportunity ID, as opposed to the partial, 15-digit ID shown in URLs.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the long Opportunity ID, as opposed to the partial, 15-digit ID shown in URLs.</inlineHelpText>
        <label>Opportunity ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Name_Short__c</fullName>
        <description>This is an abbreviated version of the Record Type name, used in the NPSP Settings to set the Opportunity Name.</description>
        <formula>CASE(RecordType.Name, 
&quot;Contracts&quot;, &quot;Contract&quot;, 
&quot;Event Registration&quot;, &quot;Event&quot;,
&quot;Fiscal Agent&quot;,&quot;Fiscal Agent&quot;,
&quot;Grants and Donations&quot;,&quot;Grant&quot;,
&quot;MGO Subscription&quot;,&quot;MGO Subscription&quot;,
&quot;Membership Detail&quot;,&quot;Membership&quot;,
&quot;Miscellaneous&quot;,&quot;Misc&quot;,
&quot;NPSP Default&quot;,&quot;NPSP Default&quot;,
&quot;Product Sales&quot;,&quot;Product Sale&quot;,
&quot;Sponsorship&quot;,&quot;Sponsorship&quot;,
LEFT(RecordType.Name,10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an abbreviated version of the Record Type name, used in the NPSP Settings to set the Opportunity Name.</inlineHelpText>
        <label>Opportunity Record Type Name Short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_ID__c</fullName>
        <description>Displays Campaign Id from the Primary Campaign Source.</description>
        <formula>Campaign.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Campaign Id from the Primary Campaign Source.</inlineHelpText>
        <label>Primary Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principles_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if the principles were agreed to on the membership form.</description>
        <inlineHelpText>Check if the principles were accepted.</inlineHelpText>
        <label>Principles Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Invoices__c</fullName>
        <description>##Conga created btn:00bj0000000YZez</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[Registrants]a0kf100000FxOOV?pv0=&quot; + Id + &quot;,[Campaigns]a0kf100000FxONN?pv0=&quot; + CampaignId +
&quot;&amp;templateid=&quot; + Create_Invoice_Template_ID__c +
&quot;&amp;ofn=Multiple Invoices &quot; +  TEXT(MONTH(TODAY())) + &quot;-&quot; + TEXT(DAY(TODAY())) + &quot;-&quot; + TEXT(YEAR(TODAY())) +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <label>Print Invoices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Thank_You_Letters__c</fullName>
        <description>##Conga created btn:00bj0000000Yd1F
##Conga updated btn:00bj0000000Yd1F</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[Primary]a0kf100000FxOTG?pv0=&quot; + AccountId + &quot;,[Campaigns]a0kf100000FxONN?pv0=&quot; + CampaignId + 
&quot;&amp;templateid=&quot; + Thank_You_Template_ID__c +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;ofn=&quot; + SUBSTITUTE( Account.Name , &quot;&amp;&quot;, &quot;and&quot;)   + &quot; &quot; + Membership_Year__c + &quot; Membership Thank You Letter&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <label>Print Thank You Letters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sale_Contact_Email__c</fullName>
        <description>Shows the Email Address for the Product Sale Contact.</description>
        <formula>gf_sf__Product_Sale_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Email Address for the Product Sale Contact.</inlineHelpText>
        <label>Product Sale Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sale_Contact_First_Name__c</fullName>
        <description>Shows First Name for the Product Sale Contact.</description>
        <formula>gf_sf__Product_Sale_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows First Name for the Product Sale Contact.</inlineHelpText>
        <label>Product Sale Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <description>Amount expected for Opportunity record</description>
        <inlineHelpText>Enter the amount expected</inlineHelpText>
        <label>Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refunds_Credits__c</fullName>
        <label>Refunds/Credits</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Payment_Amount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Special_Instructions__c</fullName>
        <description>Copies the information from the Renewal Special Instructions field on the Account.</description>
        <formula>Account.Renewal_Special_Instructions__c</formula>
        <inlineHelpText>Copies the information from the Renewal Special Instructions field on the Account. To make changes, adjust the account record.</inlineHelpText>
        <label>Renewal Special Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Great_Plains__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows whether or not this Opportunity has been exported to Great Plains.</description>
        <inlineHelpText>This field shows whether or not this Opportunity has been exported to Great Plains.</inlineHelpText>
        <label>Sent to Great Plains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Benefits_Unfulfilled__c</fullName>
        <description>These are the sponsorship benefits due to the sponsor organization, that have not been completed yet.</description>
        <inlineHelpText>Select the sponsorship benefits that have yet to be fulfilled, or de-select the ones that have been completed.</inlineHelpText>
        <label>Sponsorship Benefits Unfulfilled</label>
        <picklist>
            <picklistValues>
                <fullName>Foundation Type Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Full Page Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Half Page Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Inside Front Cover Descr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Quarter Page Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podcast - Name/Message on Mid-roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podcast - Name/Message on Pre-roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarks at Opening Ceremony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Billing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Benefits__c</fullName>
        <label>Sponsorship Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Foundation Type Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Full Page Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Half Page Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Inside Front Cover Descr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Forum - Quarter Page Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podcast - Name/Message on Mid-roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podcast - Name/Message on Pre-roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarks at Opening Ceremony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Billing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Level__c</fullName>
        <description>This is the sponsorship level.</description>
        <inlineHelpText>Enter the sponsorship level.</inlineHelpText>
        <label>Sponsorship Level</label>
        <picklist>
            <picklistValues>
                <fullName>Premier Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Room</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEMP_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[TEMP] Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thank_You_Template_ID__c</fullName>
        <description>Sets the ID for the conga template to be used with the Thank You button.</description>
        <formula>CASE( RecordTypeId,
&quot;012j0000000z3Rt&quot;, &quot;a0sj0000000Qh9w&quot;, 
&quot;012j0000000z3Ts&quot;, &quot;a0sj0000001thIf&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sets the ID for the conga template to be used with the Thank You button.</inlineHelpText>
        <label>Thank You Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Deprecated__c</fullName>
        <label>Total Paid [DEPRECATED]</label>
        <summarizedField>gf_pp__Allocation__c.gf_pp__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>gf_pp__Allocation__c.gf_pp__Amount__c</field>
            <operation>greaterOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>gf_pp__Allocation__c.gf_pp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_Renewal_Letter_Conga_Template__c</fullName>
        <description>Selects the correct Conga template for the 1st renewal letter.</description>
        <formula>CASE(TEXT(Account.gf_sf__Funder_Category__c), 
&quot;Private - Family Foundation&quot;, &quot;a0sj00000034lMh&quot;, 
&quot;Private - Independent&quot;, &quot;a0sj00000034lMr&quot;,
&quot;Community Foundation&quot;, &quot;a0sj0000002Q9OG&quot;,
&quot;Corporate Foundation/Program&quot;, &quot;a0sj00000034lMc&quot;,
&quot;a0sj00000034lMr&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Selects the correct Conga template for the 1st renewal letter.</inlineHelpText>
        <label>1st Renewal Letter Conga Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Renewal_Letter_Conga_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Primary]00Oj0000000ir0Z?pv0=&quot; + AccountId + 
&quot;&amp;templateid=&quot; +  X1st_Renewal_Letter_Conga_Template__c +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;ofn=&quot; + SUBSTITUTE( Account.Name , &quot;&amp;&quot;, &quot;and&quot;) + &quot; &quot; + Membership_Year__c + &quot; Membership 1st Renewal Letter&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Renewal Letter Conga URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Renewal_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the first renewal letter was sent.</description>
        <inlineHelpText>Check when the first renewal letter is sent.</inlineHelpText>
        <label>1st Renewal Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Renewal_Letters_Conga_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Primary]00Oj0000000ir0Z?pv0=&quot; + AccountId + 
&quot;&amp;templateid=a0sj0000002FdOS&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;ofn=&quot; + SUBSTITUTE( Account.Name , &quot;&amp;&quot;, &quot;and&quot;) + &quot; &quot; + Membership_Year__c + &quot; Membership 2nd Renewal Letter&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Renewal Letters Conga URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Acknowledgement_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledgement Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Assets__c</fullName>
        <inlineHelpText>Previous Fiscal Year</inlineHelpText>
        <label>Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_sf__Check_Reference_Number__c</fullName>
        <label>Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_ID__c</fullName>
        <label>Drupal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_Registration_Link__c</fullName>
        <inlineHelpText>This value will be sent down by Drupal. It is the link back to the Drupal Registration.</inlineHelpText>
        <label>Drupal Registration Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_Type__c</fullName>
        <label>Drupal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Event_Registration_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Registration Contact (Deprecated)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Registration Opportunities</relationshipLabel>
        <relationshipName>Event_Registration_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Grants_Paid__c</fullName>
        <inlineHelpText>Enter in the total $$ value of grants paid in the previous fiscal year</inlineHelpText>
        <label>Grants Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_sf__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Number_of_Grants_Paid__c</fullName>
        <inlineHelpText>Enter in the total number of grants paid in the previous fiscal year</inlineHelpText>
        <label>Number of Grants Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gf_sf__Product_Sale_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field shows the contact that purchased this order</inlineHelpText>
        <label>Product Sale Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Sales</relationshipLabel>
        <relationshipName>OpportunitySales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sps__Current_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box identifies membership status.</description>
        <inlineHelpText>Was membership active at the time of engagement?</inlineHelpText>
        <label>Current Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sps__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sps__Sponsor_Benefits__c</fullName>
        <inlineHelpText>Deprecated.</inlineHelpText>
        <label>Sponsor Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>DEPRECATED</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>gf_sps__Sponsorship_Type__c</fullName>
        <label>Sponsorship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro-Bono</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gf_sps__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Outstanding__c</fullName>
        <description>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</description>
        <formula>Amount - NULLVALUE(npe01__Payments_Made__c, 0) - NULLVALUE(npe01__Amount_Written_Off__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</inlineHelpText>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Written_Off__c</fullName>
        <description>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</description>
        <inlineHelpText>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</inlineHelpText>
        <label>Payment Writeoff Amount</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Written_Off__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Contact_Id_for_Role__c</fullName>
        <description>System field updated automatically.  Do not use.</description>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payments are active, and if this is checked, a new payment will not be automatically created for this Opportunity.</description>
        <inlineHelpText>If payments are active, and if checked, a new payment will not be automatically created for this Opportunity.</inlineHelpText>
        <label>Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Is_Opp_From_Individual__c</fullName>
        <description>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</description>
        <formula>IF( Account.npe01__SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</inlineHelpText>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Member_Level__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Determines the value on the Contact or Account of the Last Membership Level field.</inlineHelpText>
        <label>Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_End_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Origin__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reacquire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Start_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Number_of_Payments__c</fullName>
        <description>Calculated based on the Payment object.</description>
        <inlineHelpText>Total number of payments for this Opportunity (Donation)</inlineHelpText>
        <label>Number of Payments</label>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Made__c</fullName>
        <description>The total value of Payments marked as paid for this Opportunity.</description>
        <inlineHelpText>The total value of Payments marked as paid for this Opportunity.</inlineHelpText>
        <label>Payment Amount Received</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CombinedRollupFieldset__c</fullName>
        <description>Hidden system field, do not add to layouts.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(npe01__Member_Level__c) + &apos;;|;&apos;+ TEXT(npe01__Membership_Origin__c) + &apos;;|;&apos; +  Id</formula>
        <inlineHelpText>Formula: Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__CurrentGenerators__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <inlineHelpText>Deprecated field. Do not use.</inlineHelpText>
        <label>Current Generator(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__DeliveryInstallationStatus__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <inlineHelpText>Deprecated field. Do not use.</inlineHelpText>
        <label>Delivery/Installation Status- DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__MainCompetitors__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <inlineHelpText>Deprecated field. Do not use.</inlineHelpText>
        <label>Main Competitor(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__OrderNumber__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <inlineHelpText>Deprecated field. Do not use.</inlineHelpText>
        <label>Order Number - DEPRECATED</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__TrackingNumber__c</fullName>
        <description>Deprecated field. Do not use.</description>
        <inlineHelpText>Deprecated field. Do not use.</inlineHelpText>
        <label>Tracking Number - DEPRECATED</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__systemHouseholdContactRoleProcessor__c</fullName>
        <description>Hidden system field.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities.  System field, do not use.</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Opportunities</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this gift.</description>
        <inlineHelpText>Status of Acknowledgment of this gift.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Acknowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npsp__Ask_Date__c</fullName>
        <description>The date when the donor was specifically asked for the donation, as opposed to the Opportunity Close Date that the organization may set to either when the Opportunity was first created, or when the Opportunity was won.</description>
        <inlineHelpText>The date when the donor was specifically asked for the donation, as opposed to the Opportunity Close Date that the organization may set to either when the Opportunity was first created, or when the Opportunity was won.</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>